--- a/index.html
+++ b/index.html
@@ -16,16 +16,17 @@
             <input type="text" class="search" placeholder="Search Amazon">
             <nav class="top-icons">
                 <div>Account & Lists</div>
-                <div>Orders</div>
                 <div>Cart</div>
+                <div>Orders</div>
             </nav>
         </div>
         <div class="subdiv2">
-            <nav class="below-top-icons">
+            <nav class="below-top-icons">lo
                 <div>All</div>
                 <div>Today's Deals</div>
                 <div>Customer Service</div>
                 <div>Registry</div>
+                
                 <div>Gift Cards</div>
                 <div>Sell</div>
             </nav>
@@ -34,6 +35,7 @@
     <div class="div2">
         <h2>Winter Deal: Save up to 40%</h2>
     </div>
+ <!-- I want to test the git commit  -->
     <div class="div-boxes">
         <div class="div-boxes-children">
             <h3>Featured Winter Sale Deals</h3>
